--- a/frontend/src/app/bank/components/customer/customer.component.html
+++ b/frontend/src/app/bank/components/customer/customer.component.html
@@ -1,34 +1,51 @@
+<app-navbar></app-navbar>
+ 
 <form (ngSubmit)="onSubmit()" [formGroup]="customerForm" class="user-form">
   <div class="form-group">
     <label for="userId">Name:</label>
-    <input type="text" id="name" formControlName="name" class="form-control">
-    <!-- <div *ngIf="customerForm.get('name')?.hasError('required') && customerForm.get('name')?.touched && customerForm.get('name')?.dirty">
-        Name is required
-    </div> -->
-    </div>
+    <input
+      type="text"
+      id="name"
+      formControlName="name"
+      class="form-control"
+    />
+  </div>
   <div class="form-group">
     <label for="userId">Email:</label>
-    <input type="email" id="email" formControlName="email" class="form-control">
-    <!-- <div *ngIf="customerForm.get('email')?.hasError('required') && customerForm.get('email')?.touched && customerForm.get('email')?.dirty">
-        Email is required
-    </div> -->
+    <input
+      type="email"
+      id="email"
+      formControlName="email"
+      class="form-control"
+    />
   </div>
   <div class="form-group">
     <label for="userId">User Name:</label>
-    <input type="text" id="username" formControlName="username" class="form-control">
-    <!-- <div *ngIf="customerForm.get('username')?.hasError('required') && customerForm.get('username')?.touched && customerForm.get('username')?.dirty">
-        Username is required
-    </div> -->
+    <input
+      type="text"
+      id="username"
+      formControlName="username"
+      class="form-control"
+    />
   </div>
   <div class="form-group">
     <label for="userId">Password:</label>
-    <input type="text" id="password" formControlName="password" class="form-control">
-    <!-- <div *ngIf="customerForm.get('password')?.hasError('required') && customerForm.get('password')?.touched && customerForm.get('password')?.dirty">
-        Password is required
-    </div> -->
+    <input
+      type="password"
+      id="password"
+      formControlName="password"
+      class="form-control"
+    />
+  </div>
+  <div class="form-group">
+    <label for="role">Role:</label>
+    <select formControlName="role" class="form-control">
+      <option value="USER">User</option>
+      <option value="ADMIN">Admin</option>
+    </select>
   </div>
   <button type="submit" class="btn-submit">Create Customer</button>
-
+ 
   <ng-container>
     <div *ngIf="customerError$ | async as error" class="error">
       {{ error }}
@@ -37,6 +54,7 @@
       {{ msg }}
     </div>
   </ng-container>
-
-   <a [routerLink]="['/bank']" class="task-list">Dashboard</a> 
+ 
+  <a routerLink="/bank" class="task-list" class="task-list">Dashboard</a>
 </form>
+ 
